--- a/pcsx2/windows/VCprojects/pcsx2.vcxproj.filters
+++ b/pcsx2/windows/VCprojects/pcsx2.vcxproj.filters
@@ -976,7 +976,7 @@
     <ClCompile Include="..\..\gui\DriveList.cpp">
       <Filter>AppHost</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\IPC.cpp">
+    <ClCompile Include="..\..\PINE.cpp">
       <Filter>System</Filter>
     </ClCompile>
     <ClCompile Include="..\..\FW.cpp">
@@ -1348,7 +1348,7 @@
     <ClCompile Include="..\..\PAD\Windows\PADRawInput.cpp">
       <Filter>System\Ps2\PAD</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\gui\Dialogs\IPCDialog.cpp">
+    <ClCompile Include="..\..\gui\Dialogs\PINEDialog.cpp">
       <Filter>AppHost\Dialogs</Filter>
     </ClCompile>
     <ClCompile Include="..\..\gui\Dialogs\GSDumpDialog.cpp">
@@ -1818,7 +1818,7 @@
     <ClInclude Include="..\..\gui\DriveList.h">
       <Filter>AppHost\Include</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\IPC.h">
+    <ClInclude Include="..\..\PINE.h">
       <Filter>System\Include</Filter>
     </ClInclude>
     <ClInclude Include="..\..\FW.h">
