Move the wx GS dialog I made in wx-gsdx over to a new branch now that gsdx has been merged into pcsx2.

--- a/pcsx2/CMakeLists.txt
+++ b/pcsx2/CMakeLists.txt
@@ -633,7 +633,7 @@ set(pcsx2GSSources
 	GS/Renderers/OpenGL/GSTextureOGL.cpp
 	GS/Window/GSSetting.cpp
 	GS/Window/GSWnd.cpp
-	GS/Window/GSLinuxDialog.cpp
+	GS/Window/GSwxDialog.cpp
 	GS/Window/GSWndEGL.cpp
 	)
 
@@ -707,6 +707,7 @@ set(pcsx2GSHeaders
 	GS/Window/GSSettingsDlg.h
 	GS/Window/GSWnd.h
 	GS/Window/GSWndEGL.h
+	GS/Window/GSwxDialog.h
 	)
 
 # GS resources
